[package]
name = "ecdsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "0.4.2"
ark-secp256k1 = "0.4.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
ark-ff = "0.4.2"
ark-std = "0.4.0"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
ark-snark = "0.4.0"
ark-serialize = "0.4.2"
ark-crypto-primitives = "0.4.0"
ark-bn254 = "0.4.0"
ark-ed-on-bn254 = { version = "0.4.0", features = ["r1cs"] }
ark-nonnative-field = "0.3.0"
